--- a/Report/Report.csproj
+++ b/Report/Report.csproj
@@ -240,16 +240,18 @@
     <Compile Include="Pdf\AppPath.cs" />
     <Compile Include="Pdf\InstallFonts.cs" />
     <Compile Include="Pdf\Pdf2Image.cs" />
-    <Compile Include="Pdf\PdfReports.cs" />
+    <Compile Include="Pdf\ConstructurePdfReport.cs" />
     <Compile Include="Pdf\SampleReport\Group\Group.cs" />
     <Compile Include="Pdf\SampleReport\Group\GroupingHeaders.cs" />
     <Compile Include="Pdf\SampleReport\Headers_Footers\Headers_Footers.cs" />
     <Compile Include="Pdf\SampleReport\Headers_Footers\Header_1\C1Header.cs" />
     <Compile Include="Pdf\SampleReport\Headers_Footers\Header_1\Program.cs" />
     <Compile Include="Pdf\SampleReport\InlineHeader\InlineHeaders.cs" />
+    <Compile Include="Pdf\SampleReport\InlineProvide.cs" />
     <Compile Include="Pdf\SampleReport\List.cs" />
     <Compile Include="Pdf\Template\GrayTemplate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\AccountingViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
