--- a/Report/Web.config
+++ b/Report/Web.config
@@ -67,7 +67,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DBFirst" connectionString="data source=.;initial catalog=Report;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DBFirst" connectionString="data source=.;initial catalog=Report;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="Deca" connectionString="data source=.;initial catalog=DecaFinancial;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
