--- a/Report/Web.config
+++ b/Report/Web.config
@@ -68,5 +68,6 @@
   </system.codedom>
   <connectionStrings>
     <add name="DBFirst" connectionString="data source=.;initial catalog=Report;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
-  <add name="Deca" connectionString="data source=.;initial catalog=DecaFinancial;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="DecaFinancialEntities" connectionString="metadata=res://*/Models.Deca.csdl|res://*/Models.Deca.ssdl|res://*/Models.Deca.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DecaFinancial;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
