--- a/Report/Report.csproj
+++ b/Report/Report.csproj
@@ -195,6 +195,15 @@
       <DependentUpon>Deca.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Manager.cs" />
+    <Compile Include="Models\STP_GetCertainAccountBalance4Columns_Result.cs">
+      <DependentUpon>Deca.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\STP_GetDetailedAccountBalance4Columns_Result.cs">
+      <DependentUpon>Deca.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\STP_GetTotalAccountBalance4Columns_Result.cs">
+      <DependentUpon>Deca.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\VW_AccountingDocumentPrint.cs">
       <DependentUpon>Deca.tt</DependentUpon>
     </Compile>
@@ -204,6 +213,8 @@
     <Compile Include="Pdf\Pdf2Image.cs" />
     <Compile Include="Pdf\ConstructurePdfReport.cs" />
     <Compile Include="Pdf\PdfHandler.cs" />
+    <Compile Include="Pdf\SampleReport\Balance\CertainBalance.cs" />
+    <Compile Include="Pdf\SampleReport\Balance\DetailedBalance.cs" />
     <Compile Include="Pdf\SampleReport\Custom\Header.cs" />
     <Compile Include="Pdf\SampleReport\Grouping\AccGroup.cs" />
     <Compile Include="Pdf\SampleReport\Grouping\HeaderGroup.cs" />
@@ -214,7 +225,7 @@
     <Compile Include="Pdf\SampleReport\InlineProvide.cs" />
     <Compile Include="Pdf\SampleReport\List.cs" />
     <Compile Include="Pdf\SampleReport\SumNull.cs" />
-    <Compile Include="Pdf\SampleReport\TaxBalance.cs" />
+    <Compile Include="Pdf\SampleReport\Balance\TotalBalance.cs" />
     <Compile Include="Pdf\Template\GrayTemplate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\AccountingViewModel.cs" />
