--- a/Report/Report.csproj
+++ b/Report/Report.csproj
@@ -213,8 +213,6 @@
     <Compile Include="Pdf\Pdf2Image.cs" />
     <Compile Include="Pdf\ConstructurePdfReport.cs" />
     <Compile Include="Pdf\PdfHandler.cs" />
-    <Compile Include="Pdf\SampleReport\Balance\CertainBalance.cs" />
-    <Compile Include="Pdf\SampleReport\Balance\DetailedBalance.cs" />
     <Compile Include="Pdf\SampleReport\Custom\Header.cs" />
     <Compile Include="Pdf\SampleReport\Grouping\AccGroup.cs" />
     <Compile Include="Pdf\SampleReport\Grouping\HeaderGroup.cs" />
@@ -225,7 +223,7 @@
     <Compile Include="Pdf\SampleReport\InlineProvide.cs" />
     <Compile Include="Pdf\SampleReport\List.cs" />
     <Compile Include="Pdf\SampleReport\SumNull.cs" />
-    <Compile Include="Pdf\SampleReport\Balance\TotalBalance.cs" />
+    <Compile Include="Pdf\SampleReport\Balance\TaxBalance.cs" />
     <Compile Include="Pdf\Template\GrayTemplate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\AccountingViewModel.cs" />
